# rounding-price-function

./: package.json  shopify.app.toml
extensions/buy2get2free/: Cargo.toml  shopify.extension.toml
extensions/buy2get2free/locales/: en.default.json
extensions/buy2get2free/src/: generate_cart_run.graphql  generate_cart_run.rs
extensions/demo-cart-transform-extension/: README.md  shopify.app.rounding-price-update-function.toml
extensions/four-item-25off/: Cargo.toml  shopify.extension.toml
extensions/four-item-25off/locales/: en.default.json
extensions/four-item-25off/src/: fourproductsdiscount.rs.old  run.rs
extensions/minimum-order-total/: Cargo.toml  shopify.extension.toml
extensions/minimum-order-total/src/: run.rs  (+1 more)
extensions/order-discount-tag/: Cargo.toml  shopify.extension.toml
extensions/product-discount/: Cargo.toml  shopify.app.rounding-price-function.toml  shopify.extension.toml
extensions/round-base-price-cart-transform-extension/: shopify.extension.toml
extensions/shipping-discount-combine/: Cargo.toml  shopify.extension.toml
extensions/snowboard-bundle/: Cargo.toml  shopify.extension.toml
extensions/threshold-nodiscounts-taxinc/: Cargo.toml  shopify.extension.toml
extensions/validation-ui-extension/: package.json  shopify.extension.toml
extensions/vol-discount-variant/: Cargo.toml  shopify.extension.toml
extensions/warranty-price-update/: Cargo.toml  shopify.extension.toml
extensions/warranty-price-update/locales/: en.default.json
extensions/warranty-price-update/src/: run.graphql  run.rs  run.rs-sellingplan  run.rs.old
(+22 files in other folders)
