[package]
name = "warranty-price-update"
version = "1.0.0"
edition = "2021"
rust-version = "1.62"

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_with = "1.13.0"
serde_json = "1.0"
shopify_function = "0.8.0"
graphql_client = "0.14.0"
rust_decimal = { version = "1.27.0", features = ["serde"] }
rust_decimal_macros = "1.27.0"
anyhow = "1.0"

[profile.release]
lto = true
opt-level = 's'
strip = true
